# discord-etl-pipeline

./: .gitignore  LICENSE  README.md  bot_demo.py  chat_history.csv  discord_chat_history_exporter.py  discord_etl_pipeline.py  discord_guild_channel_exporter.py  fetch_channel.py  fetch_channel_2.py  fetch_channel_threads.py  fetch_history.py  fetch_history_100.py  g_chat_last100.json  g_chat_log.txt  guild_channels.json  guild_channels_with_threads.json  hello.py  pyproject.toml  scheduler.py
csv_files/: announcements_history_chat_history.csv  bot-testing_history_chat_history.csv  general_history_chat_history.csv  meetings_history_chat_history.csv  server-admin_history_chat_history.csv  socials_history_chat_history.csv  task-assignments_history_chat_history.csv  wins_history_chat_history.csv
